--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -2,7 +2,7 @@
   --main-dark_color: #474747;
   --main-white_color: #F5F5F5;
   --main-color : #72A276;
-  --dynamique-color: #ED1C24;
+  --dynamic-color: #ED1C24;
   --second-color: #666B6A;
   
 
