mise en forme calculatrice + ajout lastresult + ajout "coockie darkmode"

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -3,7 +3,8 @@
   --main-white_color: #474747;
   --main-color : #72A276;
   --dynamic-color: #ED1C24;
-  --second-color: #666B6A;
+  --second-color: #ACAFAE;
+  --light-color : #A0EEC0
   
 
 }
