--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -38,3 +38,10 @@ main{
 h1 {
   font-size: 1.5em;
 }
+
+.wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 100px;
+  justify-content: space-around;
+}
